@@ -10,7 +10,7 @@
 //####COPYRIGHTBEGIN####
 //                                                                          
 // ----------------------------------------------------------------------------
-// Copyright (C) 2004 eCosCentric Limited
+// Copyright (C) 2004, 2005, 2008 eCosCentric Limited
 // Copyright (C) 2002 Bart Veer
 // Copyright (C) 1999, 2000, 2001 Red Hat, Inc.
 //
@@ -1179,7 +1179,8 @@ set result {}                                               \n\
 foreach entry [glob -nocomplain -- $pattern] {              \n\
     if ([file isdirectory $entry]) {                        \n\
         set entry [file tail $entry]                        \n\
-        if {($entry != \"CVS\") && ($entry != \"cvs\")} {   \n\
+        if {($entry != \"CVS\") && ($entry != \"cvs\") &&     \
+            ([string index $entry 0] != \".\")} {           \n\
             lappend result $entry                           \n\
         }                                                   \n\
     }                                                       \n\
@@ -1250,7 +1251,10 @@ foreach entry [glob -nocomplain -- $pattern] {          \n\
     if ([file isdirectory $entry]) {                    \n\
         continue                                        \n\
     }                                                   \n\
-    lappend result [file tail $entry]                   \n\
+    set entry [file tail $entry]                        \n\
+    if {[string index $entry 0] != \".\"} {             \n\
+        lappend result $entry                           \n\
+    }                                                   \n\
  }                                                      \n\
 return $result                                          \n\
 ";
